--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 
  
 
+   <script src="js/common.js"></script>
    <script src="js/case.js"></script>
    <script src="js/phone.js"></script>
 </body>
